Closed Bug 545330 Opened 14 years ago Closed 14 years ago

Crash [@ PresShell::Destroy] on exit after failed Print Preview of XUL document

Categories

(Core :: Print Preview, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: MatsPalmgren_bugz, Assigned: smaug)

References

()

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(2 files)

Crash [@ PresShell::Destroy] on exit after failed Print Preview of XUL document.

STEPS TO REPRODUCE
1. load URL
2. File->Print Preview
3. dismiss the error dialog
4. File->Quit

ACTUAL RESULTS
Segmentation fault

REGRESSION RANGE
2009-12-11-03 -- 2009-12-12-03
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=9af2a428dcb1&tochange=d379a17cbf8f
I'm guessing it was caused by bug 487667.
Flags: in-testsuite?
Assignee: nobody → Olli.Pettay
Attached patch patchSplinter Review
This should work well enough.
Attachment #426199 - Flags: review?(matspal)
Comment on attachment 426199 [details] [diff] [review]
patch

>+      this._callback.onEnter();
>+      this._callback.onExit();

Alternatively, we could skip the onEnter and require that onExit deals.
In this case onExit in browser.js needs something like:
    if (gInPrintPreviewMode) {
      gInPrintPreviewMode = false;
      this._toggleAffectedChrome();
    }
which avoids the flickering from toggling the chrome off/on.

Either way is fine with me though, r=mats
Attachment #426199 - Flags: review?(matspal) → review+
http://hg.mozilla.org/mozilla-central/rev/d532977c11bf
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Crash Signature: [@ PresShell::Destroy]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: