 Bug 545330 -  Crash [@ PresShell::Destroy] on exit after failed Print Preview of XUL document, r=mats